fixed toprow reactive spacings

--- a/website/assets/styles/style.css
+++ b/website/assets/styles/style.css
@@ -36,6 +36,16 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
+  #topRow {
+    display: flex;
+    flex-direction: row;
+  }
+  #quoteAndStoneDiv {
+    max-width: 30%;
+  }
+  #docsThumbnail {
+    max-width: 18em;
+  }
 }
 @media screen and (max-width: 1100px) {
   #sideBarLeft {
@@ -45,21 +55,28 @@ body {
     display: flex;
     flex-direction: column;
   }
+  #docsThumbnail {
+    max-width: 100%;
+  }
+  #topRow {
+    display: flex;
+    flex-direction: column;
+  }
   #sideBarRight {
     width: 60vw;
   }
 }
 @media screen and (min-width: 900px) {
-  #topRow {
-    display: flex;
-    flex-direction: row;
-  }
   #docsDiv {
     margin-left: auto;
     margin-right: auto;
   }
 }
 @media screen and (max-width: 900px) {
+  #welcomeAndDocsDiv {
+    display: flex;
+    flex-direction: column;
+  }
   #topRow {
     display: flex;
     flex-direction: column;
@@ -144,8 +161,8 @@ body {
   height: 100vh;
 }
 
-#quoteAndStoneDiv {
-  max-width: 30%;
+#welcomeCard {
+  height: fit-content;
 }
 
 footer {
@@ -173,9 +190,13 @@ footer {
   height: 100vh;
 }
 
-#docsDiv, #docsThumbnail {
-  max-width: 18em;
-  max-height: 180px;
+#docsDiv {
+  max-width: fit-content;
+  max-height: fit-content;
+}
+
+#docsThumbnail {
+  max-height: 100%;
 }
 
 #quoteDiv {
